[project]
name = "oshconnect"
version = "0.5.1a2"
description = "Library for interfacing with OSH, helping guide visualization efforts, and providing a place to store configurations. Implements OGC CS API Part 3 (Pub/Sub) MQTT topic conventions including :data topics and resource event topics."
readme = "README.md"
authors = [
    { name = "Ian Patterson", email = "ian.patterson@georobotix.us" },
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "paho-mqtt>=2.1.0",
    "pydantic>=2.12.5,<3.0.0",
    "shapely>=2.1.2,<3.0.0",
    "websockets>=12.0,<17.0",
    # Floors below resolve open Dependabot alerts (May 2026 sweep). See the
    # security tab for the per-advisory list; collectively these fix 25 of 27.
    "requests>=2.33.1",
    "aiohttp>=3.13.5",
    "urllib3>=2.6.3",         # transitive via requests; explicit floor pins the patched version
]
[project.optional-dependencies]
dev = [
    "flake8>=7.2.0",
    # pytest>=8.4.2 picks up the tmpdir handling fix (GHSA / Dependabot alert #27).
    # 9.x verified compatible (May 2026): only PytestRemovedIn9Warning -> error
    # could bite, and our suite uses none of those deprecated APIs.
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0",
    "interrogate>=1.7.0",
    # Sphinx + Furo is the canonical docs toolchain. Furo is the modern
    # dark-mode-first theme used by Black, attrs, Pip, etc.
    "sphinx>=7.4.7",
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
    "sphinxcontrib-mermaid>=1.0.0",
    "sphinx-copybutton>=0.5.2",
    # Pygments is transitive via sphinx; explicit floor pins the patched version
    # to resolve the Dependabot alert flagging older versions.
    "Pygments>=2.20.0",
]
tinydb = ["tinydb>=4.8.0,<5.0.0"]

[tool.setuptools]
packages = {find = { where = ["src/"]}}

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "network: test requires a live OSH server or external network endpoint (skipped by default in CI; see workflow `tests.yaml`).",
]

# Coverage is opt-in (run with `pytest --cov`) so the default `pytest` run stays fast.
# `--cov` with no argument picks up the source paths configured below.

[tool.coverage.run]
source = ["src/oshconnect"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Docstring presence (not style). Run with `uv run interrogate -v src/oshconnect`.
[tool.interrogate]
ignore-init-method = true       # constructors covered by class docstring
ignore-init-module = true       # don't require docstrings on bare __init__.py
ignore-magic = true             # skip dunder methods (__repr__, __eq__, etc.)
ignore-private = true           # skip _name and __name (non-dunder) members
ignore-property-decorators = true
ignore-nested-functions = true
ignore-setters = true
fail-under = 0                  # report-only for now; raise once a baseline is set
exclude = ["tests", "docs", "build", ".venv", "scripts"]
verbose = 2                     # 0=summary, 1=per-file, 2=per-symbol
